--- a/sim.qmd
+++ b/sim.qmd
@@ -17,43 +17,8 @@ OD data is a key input into spatial interaction models (SIMs) for generating rou
 The code is fully reproducible, although requires a validation dataset that is not in the public domain to generate goodness-of-fit statistics shown in this README.
 
 ```{r}
-#| eval: false
-#| echo: false
-#| label: repo-setup
-# Create data-raw and data folders
-usethis::use_data_raw()
-usethis::use_description()
-usethis::use_r("get.R")
-usethis::use_package("sf")
-usethis::use_package("simodels")
-#     ‘fs’ ‘lubridate’ ‘stringr’
-usethis::use_package("fs")
-usethis::use_package("lubridate")
-usethis::use_package("stringr")
-devtools::check()
-# Set-up pkgdown + ci
-usethis::use_pkgdown()
-usethis::use_github_action("pkgdown")
-# Setup gh pages:
-usethis::use_github_pages()
-```
-
-Install the package as follows (you can also clone the repo and run `devtools::load_all()`):
-
-```{r}
-#| echo: true
-#| eval: false
-if (!require("devtools")) install.packages("devtools")
-devtools::install_github("acteng/netgen")
-```
-
-```{r}
 #| include: false
-devtools::load_all()
-```
-
-```{r}
-#| include: false
+remotes::install_cran("simodels")
 library(tidyverse)
 library(patchwork)
 # Set theme to void:
@@ -72,6 +37,7 @@ bgri_4326 = sf::st_make_valid(bgri_4326)
 home_zones = bgri_4326 |> 
   select(OBJECTID, N_INDIVIDUOS_0_14)
 
+# See schools.qmd
 schools_c1 = readRDS("data/c1_public.Rds")
 # sf::st_crs(school) = 4326
 schools_c1 = schools_c1 |> 
@@ -829,8 +795,8 @@ cor(si_proportion_res2$interaction, si_proportion_res2$frequency, use = "complet
 
 ```{r}
 #| eval: false
-library(glmmTMB)
-mglm1 = glmmTMB(frequency ~ exp(-distance_km) + (1|O),
-  data = od_from_si_proportion)
+# library(glmmTMB)
+# mglm1 = glmmTMB(frequency ~ exp(-distance_km) + (1|O),
+#   data = od_from_si_proportion)
 ```
 
