--- a/README.Rmd
+++ b/README.Rmd
@@ -56,6 +56,7 @@ lapply(pkg_deps$Package, usethis::use_package)
 devtools::check()
 usethis::use_mit_license()
 usethis::use_github_action("check-standard")
+pkgdown::build_site_github_pages()
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
