--- a/README.Rmd
+++ b/README.Rmd
@@ -73,3 +73,11 @@ You can also embed plots, for example:
 
 
 In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+
+## Style
+
+Format the package with:
+
+```sh
+air format .
+```
