--- a/schools.qmd
+++ b/schools.qmd
@@ -28,40 +28,46 @@ We sourced high resolution population data, including the population aged 0-14 l
 
 
 ```{r}
-schools_geo = readRDS("data/SCHOOLS_geo.Rds")
-schools_year = readRDS("data/SCHOOLS_year.Rds")
+schools_geo <- readRDS("data/SCHOOLS_geo.Rds")
+schools_year <- readRDS("data/SCHOOLS_year.Rds")
 
-bgri = read_sf("../internal/BGRI21_170/BGRI21_170.gpkg")
-bgri_lisbon = bgri |> 
+bgri <- read_sf("../internal/BGRI21_170/BGRI21_170.gpkg")
+bgri_lisbon <- bgri |>
   filter(DTMN21 == 1106)
 
-schools_both = inner_join(schools_year, schools_geo, by = c("DGEEC_id" = "CÓDIGO DGEEC ESCOLA"))
-schools_both = st_as_sf(schools_both)
+schools_both <- inner_join(schools_year, schools_geo, by = c("DGEEC_id" = "CÓDIGO DGEEC ESCOLA"))
+schools_both <- st_as_sf(schools_both)
 
-by_ciclo = schools_both |> 
-  group_by(DGEEC_id, ESCOLA, MUNICIPIO, PUBLIC_PRIVATE, CICLO_ESTUDOS) |> 
+by_ciclo <- schools_both |>
+  group_by(DGEEC_id, ESCOLA, MUNICIPIO, PUBLIC_PRIVATE, CICLO_ESTUDOS) |>
   summarise(STUDENTS = sum(STUDENTS))
 
-c1 = by_ciclo |> 
+c1 <- by_ciclo |>
   filter(CICLO_ESTUDOS == "1.º Ciclo")
-c2 = by_ciclo |> 
+c2 <- by_ciclo |>
   filter(CICLO_ESTUDOS == "2.º Ciclo")
-c3 = by_ciclo |> 
+c3 <- by_ciclo |>
   filter(CICLO_ESTUDOS == "3.º Ciclo")
 
 # saveRDS(c1, "data/c1.Rds")
 # saveRDS(c2, "data/c2.Rds")
 # saveRDS(c3, "data/c3.Rds")
 
-c1_public = by_ciclo |> 
-  filter(CICLO_ESTUDOS == "1.º Ciclo",
-         PUBLIC_PRIVATE == "Público")
-c2_public = by_ciclo |> 
-  filter(CICLO_ESTUDOS == "2.º Ciclo",
-         PUBLIC_PRIVATE == "Público")
-c3_public = by_ciclo |> 
-  filter(CICLO_ESTUDOS == "3.º Ciclo",
-         PUBLIC_PRIVATE == "Público")
+c1_public <- by_ciclo |>
+  filter(
+    CICLO_ESTUDOS == "1.º Ciclo",
+    PUBLIC_PRIVATE == "Público"
+  )
+c2_public <- by_ciclo |>
+  filter(
+    CICLO_ESTUDOS == "2.º Ciclo",
+    PUBLIC_PRIVATE == "Público"
+  )
+c3_public <- by_ciclo |>
+  filter(
+    CICLO_ESTUDOS == "3.º Ciclo",
+    PUBLIC_PRIVATE == "Público"
+  )
 
 # Required for sim.qmd
 saveRDS(c1_public, "data/c1_public.Rds")
@@ -73,24 +79,28 @@ For Lisbon municipality, this shows the number of students at Ciclo 1 schools.
 
 
 ```{r fig.cap= "Ciclo 1 schools in Lisbon municipality, with number of students"}
-lisbon_c1 = by_ciclo |> 
-  filter(MUNICIPIO == "Lisboa",
-         CICLO_ESTUDOS == "1.º Ciclo")
-lisbon_c2 = by_ciclo |> 
-  filter(MUNICIPIO == "Lisboa",
-         CICLO_ESTUDOS == "2.º Ciclo")
-lisbon_c3 = by_ciclo |> 
-  filter(MUNICIPIO == "Lisboa",
-         CICLO_ESTUDOS == "3.º Ciclo")
+lisbon_c1 <- by_ciclo |>
+  filter(
+    MUNICIPIO == "Lisboa",
+    CICLO_ESTUDOS == "1.º Ciclo"
+  )
+lisbon_c2 <- by_ciclo |>
+  filter(
+    MUNICIPIO == "Lisboa",
+    CICLO_ESTUDOS == "2.º Ciclo"
+  )
+lisbon_c3 <- by_ciclo |>
+  filter(
+    MUNICIPIO == "Lisboa",
+    CICLO_ESTUDOS == "3.º Ciclo"
+  )
 
 tm_shape(bgri_lisbon) + tm_polygons("N_INDIVIDUOS_0_14") +
   tm_shape(lisbon_c1) + tm_dots(size = "STUDENTS")
 ```
 
 ```{r}
-
 ```
 
 ```{r}
-
 ```
