--- a/sim-almada.qmd
+++ b/sim-almada.qmd
@@ -31,9 +31,9 @@ The input datasets are illustrated in the figure below (these are census data fo
 ```{r}
 #| label: inputs
 # zone_counts = readRDS("data/zone_counts.Rds")
-bgri = sf::read_sf("../internal/BGRI21_170/BGRI21_170.gpkg")
-bgri_4326 = sf::st_transform(bgri, 4326)
-bgri_4326 = sf::st_make_valid(bgri_4326)
+bgri <- sf::read_sf("../internal/BGRI21_170/BGRI21_170.gpkg")
+bgri_4326 <- sf::st_transform(bgri, 4326)
+bgri_4326 <- sf::st_make_valid(bgri_4326)
 
 # # Restrict to Lisbon city only
 # bgri_4326 = bgri_4326 |>
@@ -41,31 +41,31 @@ bgri_4326 = sf::st_make_valid(bgri_4326)
 # schools_c1 = readRDS("data/lisbon_c1.Rds")
 
 # Restrict to Almada only
-bgri_4326 = bgri_4326 |>
+bgri_4326 <- bgri_4326 |>
   filter(DTMN21 == 1503)
-schools_c1 = readRDS("data/c1.Rds")
-schools_c1 = schools_c1 |>
+schools_c1 <- readRDS("data/c1.Rds")
+schools_c1 <- schools_c1 |>
   filter(MUNICIPIO == "Almada")
 
 # See schools.qmd
 # schools_c1 = readRDS("data/c1_public.Rds")
-schools_c1 = schools_c1 |> 
+schools_c1 <- schools_c1 |>
   mutate(
     n_pupils = STUDENTS
-    ) |> 
+  ) |>
   select(DGEEC_id, n_pupils)
 
-home_zones = bgri_4326 |> 
+home_zones <- bgri_4326 |>
   select(OBJECTID, N_INDIVIDUOS_0_14)
 
-g1 = home_zones |>
+g1 <- home_zones |>
   ggplot() +
   geom_sf() +
   labs(title = "Zones")
-g2 = schools_c1 |>
-    ggplot() +
-    geom_sf() +
-    labs(title = "Destinations (Schools)")
+g2 <- schools_c1 |>
+  ggplot() +
+  geom_sf() +
+  labs(title = "Destinations (Schools)")
 g1 + g2
 ```
 
@@ -74,7 +74,7 @@ Before we run any models let's compare the total number of pupils in the zones d
 ```{r}
 #| label: compare-totals
 #| echo: true
-zone_overestimate_factor = 
+zone_overestimate_factor <-
   (sum(home_zones$N_INDIVIDUOS_0_14) /
     sum(schools_c1$n_pupils))
 zone_overestimate_factor
@@ -88,7 +88,7 @@ To tackle this issue we'll create a new variables called `pupils_estimated` in t
 ```{r}
 #| label: add-pupils-estimated
 #| echo: true
-home_zones = home_zones |>
+home_zones <- home_zones |>
   dplyr::mutate(
     pupils_estimated = N_INDIVIDUOS_0_14 / zone_overestimate_factor
   )
@@ -109,14 +109,14 @@ Based on these inputs the `si_to_od()` function generates the OD data, as shown 
 
 ```{r}
 #| echo: true
-max_dist = 3000 # meters
-od_from_si = simodels::si_to_od(home_zones, schools_c1, max_dist = max_dist)
+max_dist <- 3000 # meters
+od_from_si <- simodels::si_to_od(home_zones, schools_c1, max_dist = max_dist)
 ```
 
 ```{r}
 #| label: plot-od-all
 #| layout-ncol: 1
-m1 = od_from_si |>
+m1 <- od_from_si |>
   ggplot() +
   geom_sf(alpha = 0.1)
 # m1 # This figure is too computationally intensive
@@ -125,14 +125,14 @@ m1 = od_from_si |>
 ```{r}
 #| include: false
 # using testing OD dataset based on the case study school, with destination code matching the one for Adriano Correia school in `schools_geo`
-case_study_school = readRDS("data/zone_counts.Rds")
-od_observed = case_study_school |> 
-  sf::st_drop_geometry() |> 
-  mutate(D = 1106908) |> 
+case_study_school <- readRDS("data/zone_counts.Rds")
+od_observed <- case_study_school |>
+  sf::st_drop_geometry() |>
+  mutate(D = 1106908) |>
   select(OBJECTID, D, n_students)
-names(od_observed)[1:3] = c("O", "D", "frequency")
+names(od_observed)[1:3] <- c("O", "D", "frequency")
 # join od_observed to od_from_si:
-od_from_si = left_join(
+od_from_si <- left_join(
   od_from_si,
   od_observed
 )
@@ -154,19 +154,19 @@ Let's run a simple model:
 ```{r}
 #| label: simple-model
 #| echo: true
-gravity_model = function(beta, d, m, n) {
+gravity_model <- function(beta, d, m, n) {
   m * n * exp(-beta * d / 1000)
-} 
+}
 # perform SIM
-od_res = simodels::si_calculate(
+od_res <- simodels::si_calculate(
   od_from_si,
   fun = gravity_model,
   d = distance_euclidean,
   m = origin_pupils_estimated,
   n = destination_n_pupils,
-#   constraint_production = origin_all,
+  #   constraint_production = origin_all,
   beta = 0.8
-  )
+)
 ```
 
 We'll make one adjustment to the output dataset, renaming the `interaction` column to `trips`, and setting the total number of trips to be the same as the total number of pupils in the destinations dataset:
@@ -174,8 +174,8 @@ We'll make one adjustment to the output dataset, renaming the `interaction` colu
 ```{r}
 #| label: adjust-output
 #| echo: true
-interaction_overestimate_factor = sum(schools_c1$n_pupils) / sum(od_res$interaction)
-od_res = od_res |>
+interaction_overestimate_factor <- sum(schools_c1$n_pupils) / sum(od_res$interaction)
+od_res <- od_res |>
   dplyr::mutate(
     interaction = interaction * interaction_overestimate_factor
   )
@@ -186,14 +186,14 @@ We can assess the model fit at three levels: the origin level (number of student
 ```{r}
 #| label: r-squared
 #| include: false
-res_o = od_res |>
+res_o <- od_res |>
   group_by(O) |>
   summarise(
     Observed = first(origin_pupils_estimated),
     Modelled = sum(interaction),
     Type = "Origin"
   )
-res_d = od_res |>
+res_d <- od_res |>
   group_by(D) |>
   summarise(
     Observed = first(destination_n_pupils),
@@ -206,26 +206,28 @@ res_d = od_res |>
 #     Modelled = interaction,
 #     Type = "OD"
 #   )
-res_combined = bind_rows(res_o, res_d
-                         # , res_od
-                         ) |>
+res_combined <- bind_rows(
+  res_o, res_d
+  # , res_od
+) |>
   # Create ordered factor with types:
   mutate(
-    Type = factor(Type, levels = c("Origin", "Destination"
-                                   # , "OD"
-                                   ))
+    Type = factor(Type, levels = c(
+      "Origin", "Destination"
+      # , "OD"
+    ))
   )
-g_combined = res_combined |>
+g_combined <- res_combined |>
   ggplot() +
-    geom_point(aes(x = Observed, y = Modelled)) +
-    geom_smooth(aes(x = Observed, y = Modelled), method = "lm") +
-    facet_wrap(~Type, scales = "free") +
-    labs(
-      title = "Model fit at origin and destination levels (unconstrained)",
-      x = "Observed",
-      y = "Modelled"
-    ) 
-#  + g_d 
+  geom_point(aes(x = Observed, y = Modelled)) +
+  geom_smooth(aes(x = Observed, y = Modelled), method = "lm") +
+  facet_wrap(~Type, scales = "free") +
+  labs(
+    title = "Model fit at origin and destination levels (unconstrained)",
+    x = "Observed",
+    y = "Modelled"
+  )
+#  + g_d
 #  + g_od
 g_combined
 # rsq = cor(od_res$frequency, od_res$interaction, use = "complete.obs")^2
@@ -236,15 +238,15 @@ g_combined
 #| label: plot_od_fit
 #| include: false
 # Aim: create function that takes in od_res and returns a ggplot object
-plot_od_fit = function(od_res, title = "(unconstrained)") {
-  res_o = od_res |>
+plot_od_fit <- function(od_res, title = "(unconstrained)") {
+  res_o <- od_res |>
     group_by(O) |>
     summarise(
       Observed = first(origin_pupils_estimated),
       Modelled = sum(interaction),
       Type = "Origin"
     )
-  res_d = od_res |>
+  res_d <- od_res |>
     group_by(D) |>
     summarise(
       Observed = first(destination_n_pupils),
@@ -257,23 +259,25 @@ plot_od_fit = function(od_res, title = "(unconstrained)") {
   #     Modelled = interaction,
   #     Type = "OD"
   #   )
-  res_combined = bind_rows(res_o, res_d
-                           # , res_od
-                           ) |>
+  res_combined <- bind_rows(
+    res_o, res_d
+    # , res_od
+  ) |>
     # Create ordered factor with types:
     mutate(
-      Type = factor(Type, levels = c("Origin", "Destination"
-                                     # , "OD"
-                                     ))
+      Type = factor(Type, levels = c(
+        "Origin", "Destination"
+        # , "OD"
+      ))
     )
-  rsq_o = cor(res_o$Observed, res_o$Modelled, use = "complete.obs")^2
-  rsq_d = cor(res_d$Observed, res_d$Modelled, use = "complete.obs")^2
+  rsq_o <- cor(res_o$Observed, res_o$Modelled, use = "complete.obs")^2
+  rsq_d <- cor(res_d$Observed, res_d$Modelled, use = "complete.obs")^2
   # rsq_od = cor(res_od$Observed, res_od$Modelled, use = "complete.obs")^2
-  rsq_summary = data.frame(
+  rsq_summary <- data.frame(
     rsq = c(rsq_o, rsq_d) |> round(3),
     Type = c("Origin", "Destination")
   )
-  g_combined = res_combined |>
+  g_combined <- res_combined |>
     left_join(rsq_summary) |>
     # Add rsquared info:
     mutate(Type = paste0(Type, " (R-squared: ", rsq, ")")) |>
@@ -282,18 +286,18 @@ plot_od_fit = function(od_res, title = "(unconstrained)") {
       Type = factor(Type, levels = unique(Type))
     ) |>
     ggplot() +
-      geom_point(aes(x = Observed, y = Modelled)) +
-      geom_smooth(aes(x = Observed, y = Modelled), method = "lm") +
-      facet_wrap(~Type, scales = "free") +
-      labs(
-        title = paste0("Model fit at origin, destination and OD levels ", title),
-        x = "Observed",
-        y = "Modelled"
-      )
+    geom_point(aes(x = Observed, y = Modelled)) +
+    geom_smooth(aes(x = Observed, y = Modelled), method = "lm") +
+    facet_wrap(~Type, scales = "free") +
+    labs(
+      title = paste0("Model fit at origin, destination and OD levels ", title),
+      x = "Observed",
+      y = "Modelled"
+    )
   g_combined
 }
 # Test it:
-g = plot_od_fit(od_res)
+g <- plot_od_fit(od_res)
 ```
 
 ```{r}
@@ -310,8 +314,8 @@ We can optimise it with an objective function that minimises the difference betw
 ```{r}
 #| label: optimise-beta
 #| echo: true
-objective_function = function(beta) {
-  od_res = simodels::si_calculate(
+objective_function <- function(beta) {
+  od_res <- simodels::si_calculate(
     od_from_si,
     fun = gravity_model,
     d = distance_euclidean,
@@ -319,8 +323,8 @@ objective_function = function(beta) {
     n = destination_n_pupils,
     beta = beta
   )
-  interaction_overestimate_factor = sum(schools_c1$n_pupils) / sum(od_res$interaction)
-  od_res = od_res |>
+  interaction_overestimate_factor <- sum(schools_c1$n_pupils) / sum(od_res$interaction)
+  od_res <- od_res |>
     dplyr::mutate(
       trips = interaction * interaction_overestimate_factor
     )
@@ -330,8 +334,8 @@ objective_function = function(beta) {
 objective_function(0.8)
 
 # Optimise it:
-beta_opt = optimise(objective_function, c(0.1, 1))
-beta_new = beta_opt$minimum
+beta_opt <- optimise(objective_function, c(0.1, 1))
+beta_new <- beta_opt$minimum
 beta_new
 ```
 
@@ -340,14 +344,14 @@ Let's try re-running the model with the new beta value:
 ```{r}
 #| label: optimised-model
 #| echo: true
-res_optimised = simodels::si_calculate(
+res_optimised <- simodels::si_calculate(
   od_from_si,
   fun = gravity_model,
   d = distance_euclidean,
   m = origin_pupils_estimated,
   n = destination_n_pupils,
   beta = beta_new
-  )
+)
 # cor(res_optimised$frequency, res_optimised$interaction, use = "complete.obs")^2
 ```
 
@@ -358,7 +362,7 @@ Let's see if making the model production constrained can help:
 ```{r}
 #| label: constrained
 #| echo: true
-res_constrained = simodels::si_calculate(
+res_constrained <- simodels::si_calculate(
   od_from_si,
   fun = gravity_model,
   d = distance_euclidean,
@@ -366,11 +370,11 @@ res_constrained = simodels::si_calculate(
   n = destination_n_pupils,
   constraint_production = origin_pupils_estimated,
   beta = beta_new
-  )
-# We need to remove the rows within 0 origin_pupils_estimated to avoid NaN errors 
-res_constrained = res_constrained |> 
+)
+# We need to remove the rows within 0 origin_pupils_estimated to avoid NaN errors
+res_constrained <- res_constrained |>
   filter(origin_pupils_estimated > 0)
-# res_constrained = res_constrained |> 
+# res_constrained = res_constrained |>
 #   mutate(interaction = tidyr::replace_na(interaction, 0))
 ```
 
@@ -378,9 +382,9 @@ res_constrained = res_constrained |>
 #| include: false
 # Aim: check totals per origin
 sum(res_constrained$interaction) == sum(schools_c1$n_pupils)
-res_constrained = res_constrained |>
+res_constrained <- res_constrained |>
   mutate(trips = interaction)
-res_constrained_o = res_constrained |>
+res_constrained_o <- res_constrained |>
   sf::st_drop_geometry() |>
   group_by(O) |>
   summarise(
@@ -403,7 +407,7 @@ Let's implement a doubly-constrained model, starting with the outputs of the pro
 ```{r}
 #| label: doubly-constrained
 #| echo: true
-res_doubly_constrained = res_constrained |>
+res_doubly_constrained <- res_constrained |>
   group_by(D) |>
   mutate(
     observed_group = first(destination_n_pupils),
@@ -412,7 +416,7 @@ res_doubly_constrained = res_constrained |>
     interaction = interaction / modelled_overestimate_factor
   )
 # summary(res_doubly_constrained)
-sum(res_doubly_constrained$interaction) == sum(res_constrained$interaction) 
+sum(res_doubly_constrained$interaction) == sum(res_constrained$interaction)
 ```
 
 The model is now 'doubly constrained' in a basic sense: the first iteration constrains the totals for each origin to the observed totals, and the second iteration constrains the totals for each destination to the observed totals.
@@ -422,7 +426,7 @@ Let's constrain by the origin totals again:
 ```{r}
 #| label: doubly-constrained-2
 #| echo: true
-res_doubly_constrained_2 = res_doubly_constrained |>
+res_doubly_constrained_2 <- res_doubly_constrained |>
   group_by(O) |>
   mutate(
     observed_group = first(origin_pupils_estimated),
@@ -437,7 +441,7 @@ And then by the destination totals again:
 ```{r}
 #| label: doubly-constrained-3
 #| echo: true
-res_doubly_constrained_3 = res_doubly_constrained_2 |>
+res_doubly_constrained_3 <- res_doubly_constrained_2 |>
   group_by(D) |>
   mutate(
     observed_group = first(destination_n_pupils),
@@ -451,7 +455,7 @@ Additional iterations do not increase model fit against the observed OD data in 
 
 ```{r}
 #| include: false
-res_doubly_constrained_4 = res_doubly_constrained_3 |>
+res_doubly_constrained_4 <- res_doubly_constrained_3 |>
   group_by(O) |>
   mutate(
     observed_group = first(origin_pupils_estimated),
@@ -459,7 +463,7 @@ res_doubly_constrained_4 = res_doubly_constrained_3 |>
     modelled_overestimate_factor = modelled_group / observed_group,
     interaction = interaction / modelled_overestimate_factor
   )
-res_doubly_constrained_5 = res_doubly_constrained_4 |>
+res_doubly_constrained_5 <- res_doubly_constrained_4 |>
   group_by(D) |>
   mutate(
     observed_group = first(destination_n_pupils),
@@ -471,9 +475,9 @@ res_doubly_constrained_5 = res_doubly_constrained_4 |>
 
 
 ```{r}
-#| include: false 
+#| include: false
 #| label: one-more-iteration
-res_doubly_constrained_6 = res_doubly_constrained_5 |>
+res_doubly_constrained_6 <- res_doubly_constrained_5 |>
   group_by(O) |>
   mutate(
     observed_group = first(origin_pupils_estimated),
@@ -481,7 +485,7 @@ res_doubly_constrained_6 = res_doubly_constrained_5 |>
     modelled_overestimate_factor = modelled_group / observed_group,
     interaction = interaction / modelled_overestimate_factor
   )
-res_doubly_constrained_7 = res_doubly_constrained_6 |>
+res_doubly_constrained_7 <- res_doubly_constrained_6 |>
   group_by(D) |>
   mutate(
     observed_group = first(destination_n_pupils),
@@ -495,7 +499,7 @@ res_doubly_constrained_7 = res_doubly_constrained_6 |>
 ```{r}
 # another iteration
 #| include: false
-res_doubly_constrained_8 = res_doubly_constrained_7 |>
+res_doubly_constrained_8 <- res_doubly_constrained_7 |>
   group_by(O) |>
   mutate(
     observed_group = first(origin_pupils_estimated),
@@ -503,7 +507,7 @@ res_doubly_constrained_8 = res_doubly_constrained_7 |>
     modelled_overestimate_factor = modelled_group / observed_group,
     interaction = interaction / modelled_overestimate_factor
   )
-res_doubly_constrained_9 = res_doubly_constrained_8 |>
+res_doubly_constrained_9 <- res_doubly_constrained_8 |>
   group_by(D) |>
   mutate(
     observed_group = first(destination_n_pupils),
@@ -527,7 +531,7 @@ For the purposes of this project, we'll only use three of them:
 
 ```{r}
 #| echo: true
-res_output = res_doubly_constrained_9 |>
+res_output <- res_doubly_constrained_9 |>
   select(O, D, trips_modelled = interaction)
 summary(res_output)
 ```
@@ -591,8 +595,8 @@ Let's try to do better by fitting a model. -->
 
 ```{r}
 #| include: false
-cutoff = 0.05
-od_from_si = od_from_si |>
+cutoff <- 0.05
+od_from_si <- od_from_si |>
   mutate(
     distance_km = distance_euclidean / 1000,
     distance_km_cutoff = case_when(
@@ -604,10 +608,10 @@ od_from_si = od_from_si |>
   )
 # plot(od_from_si$distance_euclidean, od_from_si$distance_km)
 # With ggplot2:
-g1 = od_from_si |>
+g1 <- od_from_si |>
   ggplot() +
   geom_point(aes(x = distance_euclidean, y = distance_km))
-g2 = od_from_si |>
+g2 <- od_from_si |>
   ggplot() +
   geom_point(aes(x = distance_euclidean, y = log_distance))
 g1 + g2
@@ -623,7 +627,7 @@ Let's see what the relationship between distance and trips is in the observed da
 
 ```{r}
 #| include: false
-od_from_si_proportion = od_from_si |>
+od_from_si_proportion <- od_from_si |>
   group_by(O) |>
   mutate(
     total_trips = sum(frequency, na.rm = TRUE)
@@ -634,11 +638,11 @@ od_from_si_proportion = od_from_si |>
   ) |>
   # remove NA values:
   filter(!is.na(proportion))
-g1 = od_from_si_proportion |>
+g1 <- od_from_si_proportion |>
   ggplot(aes(x = distance_km, y = frequency)) +
   geom_point() +
   geom_smooth()
-g2 = od_from_si_proportion |>
+g2 <- od_from_si_proportion |>
   ggplot(aes(x = distance_km, y = proportion)) +
   geom_point() +
   geom_smooth()
